Bring over Java 19 based functions